--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "last"
   ],
   "author": "M.K.",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
